--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 :root {
-  --gold: #ece6df;
-  --black-text: #171a1c;
-  --white-light: #f5f2ef;
-  --white: #fff;
+    --gold: #ece6df;
+    --black-text: #171a1c;
+    --white-light: #f5f2ef;
+    --white: #fff;
 }
 
 html {
-  color: var(--black-text);
-  font-size: 1em;
-  line-height: 1.4;
-  font-family: "Montserrat", sans-serif;
+    color: var(--black-text);
+    font-size: 1em;
+    line-height: 1.4;
+    font-family: "Montserrat", sans-serif;
 }
 
 
 ::-moz-selection {
-  background: #b3d4fc;
-  text-shadow: none;
+    background: #b3d4fc;
+    text-shadow: none;
 }
 
 ::selection {
-  background: #b3d4fc;
-  text-shadow: none;
+    background: #b3d4fc;
+    text-shadow: none;
 }
 
 /*
@@ -30,12 +30,12 @@ html {
  */
 
 hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ccc;
-  margin: 1em 0;
-  padding: 0;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
 }
 
 /*
@@ -50,7 +50,7 @@ iframe,
 img,
 svg,
 video {
-  vertical-align: middle;
+    vertical-align: middle;
 }
 
 /*
@@ -58,9 +58,9 @@ video {
  */
 
 fieldset {
-  border: 0;
-  margin: 0;
-  padding: 0;
+    border: 0;
+    margin: 0;
+    padding: 0;
 }
 
 /*
@@ -68,7 +68,10 @@ fieldset {
  */
 
 textarea {
-  resize: vertical;
+    resize: vertical;
+}
+a {
+    color: var(--black-text);;
 }
 
 /* ==========================================================================
@@ -85,7 +88,7 @@ textarea {
 
 .hidden,
 [hidden] {
-  display: none !important;
+    display: none !important;
 }
 
 /*
@@ -98,16 +101,16 @@ textarea {
  */
 
 .sr-only {
-  border: 0;
-  clip: rect(0, 0, 0, 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  /* 1 */
+    border: 0;
+    clip: rect(0, 0, 0, 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    /* 1 */
 }
 
 /*
@@ -118,13 +121,13 @@ textarea {
 
 .sr-only.focusable:active,
 .sr-only.focusable:focus {
-  clip: auto;
-  height: auto;
-  margin: 0;
-  overflow: visible;
-  position: static;
-  white-space: inherit;
-  width: auto;
+    clip: auto;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    position: static;
+    white-space: inherit;
+    width: auto;
 }
 
 /*
@@ -132,7 +135,7 @@ textarea {
  */
 
 .invisible {
-  visibility: hidden;
+    visibility: hidden;
 }
 
 /*
@@ -149,12 +152,12 @@ textarea {
 
 .clearfix::before,
 .clearfix::after {
-  content: " ";
-  display: table;
+    content: " ";
+    display: table;
 }
 
 .clearfix::after {
-  clear: both;
+    clear: both;
 }
 
 /* ==========================================================================
@@ -164,14 +167,14 @@ textarea {
    ========================================================================== */
 
 @media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+    /* Style adjustments for viewports that meet the condition */
 }
 
 @media print,
 (-webkit-min-device-pixel-ratio: 1.25),
 (min-resolution: 1.25dppx),
 (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+    /* Style adjustments for high resolution devices */
 }
 
 /* ==========================================================================
@@ -181,269 +184,363 @@ textarea {
    ========================================================================== */
 
 @media print {
-  *,
-  *::before,
-  *::after {
-    background: #fff !important;
-    color: #000 !important;
-    /* Black prints faster */
-    box-shadow: none !important;
-    text-shadow: none !important;
-  }
+    *,
+    *::before,
+    *::after {
+        background: #fff !important;
+        color: #000 !important;
+        /* Black prints faster */
+        box-shadow: none !important;
+        text-shadow: none !important;
+    }
 
-  a,
-  a:visited {
-    text-decoration: underline;
-  }
+    a,
+    a:visited {
+        text-decoration: underline;
+    }
 
-  a[href]::after {
-    content: " (" attr(href) ")";
-  }
+    a[href]::after {
+        content: " (" attr(href) ")";
+    }
 
-  abbr[title]::after {
-    content: " (" attr(title) ")";
-  }
+    abbr[title]::after {
+        content: " (" attr(title) ")";
+    }
 
-  /*
-   * Don't show links that are fragment identifiers,
-   * or use the `javascript:` pseudo protocol
-   */
-  a[href^="#"]::after,
-  a[href^="javascript:"]::after {
-    content: "";
-  }
+    /*
+     * Don't show links that are fragment identifiers,
+     * or use the `javascript:` pseudo protocol
+     */
+    a[href^="#"]::after,
+    a[href^="javascript:"]::after {
+        content: "";
+    }
 
-  pre {
-    white-space: pre-wrap !important;
-  }
+    pre {
+        white-space: pre-wrap !important;
+    }
 
-  pre,
-  blockquote {
-    border: 1px solid #999;
-    page-break-inside: avoid;
-  }
+    pre,
+    blockquote {
+        border: 1px solid #999;
+        page-break-inside: avoid;
+    }
 
-  /*
-   * Printing Tables:
-   * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
-   */
-  thead {
-    display: table-header-group;
-  }
+    /*
+     * Printing Tables:
+     * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
+     */
+    thead {
+        display: table-header-group;
+    }
 
-  tr,
-  img {
-    page-break-inside: avoid;
-  }
+    tr,
+    img {
+        page-break-inside: avoid;
+    }
 
-  p,
-  h2,
-  h3 {
-    orphans: 3;
-    widows: 3;
-  }
+    p,
+    h2,
+    h3 {
+        orphans: 3;
+        widows: 3;
+    }
 
-  h2,
-  h3 {
-    page-break-after: avoid;
-  }
+    h2,
+    h3 {
+        page-break-after: avoid;
+    }
 }
 
 button {
-  max-width: 255px;
-  width: 100%;
-  flex-grow: 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  padding: 22px 40px;
-  border-radius: 10px;
-  background-color: var(--black-text);
-  font-size: 28px;
-  font-weight: 600;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  text-align: left;
-  color: var(--white-light);
+    max-width: 255px;
+    width: 100%;
+    flex-grow: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 22px 40px;
+    border-radius: 10px;
+    background-color: var(--black-text);
+    font-size: 28px;
+    font-weight: 600;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: var(--white-light);
 }
 
 .gold {
-  background-color: var(--gold);
+    background-color: var(--gold);
 }
+
 .gold-gradient {
-  background-image: linear-gradient(to bottom, var(--gold) 0%, rgba(236, 230, 223, 0) 100%);
+    background-image: linear-gradient(to bottom, var(--gold) 0%, rgba(236, 230, 223, 0) 100%);
 }
 
 .main-wrapper {
-  max-width: 1720px;
-  margin: 0 auto;
-  padding-left: 26px;
-  padding-right: 26px;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  gap: 100px;
+    max-width: 1720px;
+    margin: 0 auto;
+    /*padding-left: 26px;*/
+    /*padding-right: 26px;*/
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 100px;
 }
 
 header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 10px;
-  margin-bottom: 52px;
-  padding: 32px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 52px;
+    padding: 32px;
 }
 
 nav {
-  max-width: 1046px;
-  width: 100%;
+    max-width: 1046px;
+    width: 100%;
 }
 
 nav ul {
-  padding: 0;
-  max-width: 1024px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
+    padding: 0;
+    max-width: 1024px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 ul, li {
-  list-style: none;
+    list-style: none;
 }
 
 ul li a {
-  font-size: 24px;
-  font-weight: 500;
-  color: var(--black-text);
-  text-decoration: none;
+    font-size: 24px;
+    font-weight: 500;
+    color: var(--black-text);
+    text-decoration: none;
 }
 
 ul li a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 main {
-  display: flex;
+    display: flex;
 }
 
 main .main-wrapper {
-  position: relative;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  left: 10%;
+    position: relative;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    left: 3%;
 }
 
 .main-logo {
-  width: 500px;
+    width: 500px;
 }
 
 main h1 {
-  display: none;
+    display: none;
 }
 
 main h3 {
-  font-size: 44px;
-  font-weight: normal;
-  line-height: normal;
+    font-size: 44px;
+    font-weight: normal;
+    line-height: normal;
 }
 
 .main-picture {
-  max-width: 714px;
-  position: relative;
+    max-width: 714px;
+    position: relative;
 }
 
 .pic-overlay {
-  background: linear-gradient(181deg, rgba(255, 255, 255, 0) 77.46%, var(--white-light) 97.51%);
-  border-top-left-radius: 300px;
-  width: 100%;
-  height: 100%;
-  position: absolute;
+    background: linear-gradient(181deg, rgba(255, 255, 255, 0) 77.46%, var(--white-light) 97.51%);
+    border-top-left-radius: 300px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
 
 .main-picture img {
-  background-color: #000;
-  border-top-left-radius: 50%;
+    background-color: #000;
+    border-top-left-radius: 50%;
 }
+
 section .main-wrapper {
-  flex-direction: column;
+    flex-direction: column;
 }
 
 #form-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  padding: 70px 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 70px 100px;
 }
+
 #form-main .main-wrapper {
-  flex-direction: row;
+    flex-direction: row;
 }
+
 #form-main h2 {
-  font-size: 24px;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  text-align: center;
-  color: var(--black-text);
+    font-size: 24px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: center;
+    color: var(--black-text);
 }
 
 form {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr 250px;
-  align-items: center;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 250px;
+    align-items: center;
 }
 
 label {
-  font-size: 18px;
-  line-height: 2;
+    font-size: 18px;
+    line-height: 2;
 }
 
 input {
-  max-width: 450px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 10px;
-  padding: 13px 12px;
-  border-radius: 10px;
-  border: solid 1px var(--black-text);
-  background-color: var(--white);
+    max-width: 450px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+    padding: 13px 12px;
+    border-radius: 10px;
+    border: solid 1px var(--black-text);
+    background-color: var(--white);
 }
 
-section h2 {
-  font-size: 56px;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
+section h2, footer h2 {
+    font-size: 56px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+
+}
+
+footer h3 {
+    font-size: 40px;
+    font-weight: normal;
+    text-align: center;
+    color: var(--black-text);
 }
 section p {
-  font-size: 32px;
+    font-size: 32px;
 }
+
 section h3 {
-  font-size: 36px;
+    font-size: 36px;
 }
+
 .call-to-action {
-  display: flex;
-  justify-content: end;
-  align-items: center;
+    position: relative;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    margin-bottom: 140px;
+}
+
+.call-to-action img {
+    position: absolute;
+    top: -110px;
+    z-index: -1;
 }
 
 .hl {
-  height: 1px;
-  width: 76px;
-  background: #000;
-  margin: 36px;
+    display: block;
+    height: 1px;
+    width: 76px;
+    background: #000;
+    margin: 36px;
+}
+
+.portfolio-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.portfolio-wrapper .model {
+    max-width: 550px;
+    width: 100%;
+}
+
+.model .hl {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 16px;
+}
+
+.model h3 {
+    font-size: 28px;
+    font-weight: normal;
+    line-height: normal;
+}
+
+.review {
+    display: grid;
+    grid-template-columns: 256px 2fr;
+    align-items: center;
+    gap: 64px;
+    font-size: 32px;
+    line-height: normal;
+    padding: 28px 48px;
+    border: solid 1px var(--gold);
+    border-left: none;
+    border-right: none;
+    margin-bottom: 34px;
+}
+
+.review-user {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.username {
+    /*display: flex;*/
+    justify-content: center;
+    align-items: center;
+}
+
+.username::before {
+    content: url("/img/instagram.svg");
+    margin-right: 10px;
+}
+
+.footer-wrapper h2, h3 {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+
+.footer-wrapper {
+    font-size: 40px;
+    text-align: center;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
 }
