--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,7 @@ fieldset {
 textarea {
     resize: vertical;
 }
+
 a {
     color: var(--black-text);;
 }
@@ -252,6 +253,46 @@ a {
     }
 }
 
+/**/
+
+.topnav .icon {
+    display: none;
+}
+
+@media (max-width: 1339px) {
+    .topnav li:not(:first-child) {
+        display: none;
+    }
+
+    .topnav li .icon {
+        float: right;
+        display: block;
+    }
+}
+
+@media  (max-width: 1339px) {
+    .topnav.responsive {
+        position: relative;
+    }
+
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav.responsive li {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    header .main-wrapper {
+        flex-direction: row!important;
+    }
+}
+
+/**/
+
 button {
     max-width: 255px;
     width: 100%;
@@ -331,7 +372,8 @@ ul li a:hover {
 }
 
 main {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr auto;
 }
 
 main .main-wrapper {
@@ -357,8 +399,10 @@ main h3 {
 }
 
 .main-picture {
-    max-width: 714px;
     position: relative;
+    grid-column-start: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
 }
 
 .pic-overlay {
@@ -372,6 +416,7 @@ main h3 {
 .main-picture img {
     background-color: #000;
     border-top-left-radius: 50%;
+    width: 100%;
 }
 
 section .main-wrapper {
@@ -383,8 +428,7 @@ section .main-wrapper {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
-    padding: 70px 100px;
+    padding: 70px;
 }
 
 #form-main .main-wrapper {
@@ -407,11 +451,11 @@ form {
     display: grid;
     grid-template-columns: 1fr 1fr 250px;
     align-items: center;
+    gap: 68px;
 }
 
 label {
     font-size: 18px;
-    line-height: 2;
 }
 
 input {
@@ -421,7 +465,7 @@ input {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    gap: 10px;
+    margin-top: 4px;
     padding: 13px 12px;
     border-radius: 10px;
     border: solid 1px var(--black-text);
@@ -444,6 +488,7 @@ footer h3 {
     text-align: center;
     color: var(--black-text);
 }
+
 section p {
     font-size: 32px;
 }
@@ -453,6 +498,8 @@ section h3 {
 }
 
 .call-to-action {
+    padding-left: 26px;
+    padding-right: 26px;
     position: relative;
     display: flex;
     justify-content: end;
@@ -475,6 +522,8 @@ section h3 {
 }
 
 .portfolio-wrapper {
+    max-width: 98%;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -496,6 +545,10 @@ section h3 {
     font-size: 28px;
     font-weight: normal;
     line-height: normal;
+}
+
+.model img {
+    width: 100%;
 }
 
 .review {
@@ -530,6 +583,10 @@ section h3 {
     margin-right: 10px;
 }
 
+footer .main-wrapper {
+    flex-direction: column;
+}
+
 .footer-wrapper h2, h3 {
     margin-bottom: 10px;
     margin-top: 10px;
@@ -544,3 +601,144 @@ section h3 {
     justify-content: center;
     margin: 0 auto;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+
+    form {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    label:first-child {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 2;
+    }
+
+    label:last-child {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 2;
+    }
+
+    form button {
+        grid-column-start: 2;
+        grid-column-end: 2;
+        grid-row-start: 1;
+        grid-row-end: 3;
+    }
+
+}
+
+@media (max-width: 1139px) {
+    .portfolio-wrapper {
+        justify-content: center;
+    }
+}
+
+@media (max-width: 1023px) {
+
+}
+
+@media (max-width: 767px) {
+    main {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .main-logo {
+        width: 100%;
+    }
+
+    main .slogan {
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+
+    .main-picture {
+        grid-row-start: 1;
+        grid-row-end: 1;
+    }
+
+    main button {
+        display: none;
+    }
+
+    main h3 {
+        font-size: 16px;
+        text-align: center;
+        line-height: 33px;
+        margin: 20px auto;
+    }
+
+    form {
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+
+    form label, form input, form button {
+        width: 100%;
+        max-width: 100%;
+        padding: 12px 0;
+    }
+
+    #form-main .main-wrapper {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .main-wrapper {
+        flex-direction: column !important;
+    }
+
+    #form-main {
+        padding: 20px 70px;
+    }
+
+    label, button {
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    section h2, footer h2 {
+        font-size: 20px;
+    }
+
+    section p {
+        font-size: 14px;
+    }
+
+    .call-to-action {
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .call-to-action img {
+        width: 80%;
+    }
+
+    section h3 {
+        font-size: 16px;
+    }
+
+    section button {
+        max-width: 100%;
+        width: 100%;
+        font-size: 16px;
+    }
+    .model h3 {
+        font-size: 18px;
+    }
+    .review {
+        grid-template-columns: 1fr;
+        font-size: 16px;
+        justify-content: center;
+        align-items: center;
+    }
+    footer h3 {
+        font-size: 16px;
+    }
+}
+
